--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+plank (0.11.89-2) unstable; urgency=medium
+
+  [ Rico Tzschichholz ]
+  * debian/control:
+    + Bump shlibs version to match release.
+
+  [ Mike Gabriel ]
+  * debian/control:
+    + Add Rules-Requires-Root: field and set it to no.
+    + Bump Standards-Version: to 4.5.1. No changes needed.
+    + Bump DH compat level to version 13.
+    + Switch B-D from libgdk-pixbuf2.0-dev to libgdk-pixbuf-2.0-dev. (Closes:
+      #976033).
+
+ -- Mike Gabriel <sunweaver@debian.org>  Sat, 28 Nov 2020 17:09:44 +0100
+
 plank (0.11.89-1) unstable; urgency=medium
 
   * New upstream release.
